--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\scripts\GameBoard.cs" />
     <Compile Include="Assets\scripts\Shapes.cs" />
     <Compile Include="Assets\scripts\ShapeSpawner.cs" />
     <Reference Include="UnityEditor.StandardEvents">
